force-app/main/default/objects/QTB_Product_Billing_Discount__c/QTB_Product_Billing_Discount__c.object-meta.xml
<CustomObject>
    <description>#QTB-30, This Object contains the discount details for Products that should be discounted during the Pre-Bill run Process</description>
    <label>Product Billing Discount</label>
    <nameField>
        <displayFormat>PBD-{00000000}</displayFormat>
        <label>Product Billing Discount</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Billing Discounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>