force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Account__c.field-meta.xml
<CustomField>
    <fullName>QTB_Account__c</fullName>
    <description>#QTB-30- Stores billing account to which the Product Billing Discount record is linked</description>
    <label>Account</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.ParentId</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Billing Account</value>
        </filterItems>
        <filterItems>
            <field>Account.QTB_Create_Parent_Billing_Account__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Billing Discounts</relationshipLabel>
    <relationshipName>Product_Billing_Discounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>