force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Active__c.field-meta.xml
<CustomField>
    <fullName>QTB_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>#QTB-30- Discount is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>