force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Discount__c.field-meta.xml
<CustomField>
    <fullName>QTB_Discount__c</fullName>
    <description>#QTB-30, Discount % to be applied.</description>
    <label>Discount (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>