force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_End_Date__c</fullName>
    <description>#QTB-30, Discount End Date</description>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>