force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Overlapping_Dates__c.field-meta.xml
<CustomField>
    <fullName>QTB_Overlapping_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>#QTB-30- Checkbox for Validating Overlapping Dates</description>
    <label>Overlapping Dates</label>
    <type>Checkbox</type>
</CustomField>