force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Product__c.field-meta.xml
<CustomField>
    <fullName>QTB_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>#QTB-30- Lookup to Product for selecting the Product for which Discount Should be applied</description>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.SBQQ__ChargeType__c</field>
            <operation>equals</operation>
            <value>Recurring</value>
        </filterItems>
        <filterItems>
            <field>Product2.RecordTypeId</field>
            <operation>equals</operation>
            <value>Global Sales Product</value>
        </filterItems>
        <filterItems>
            <field>Product2.SBQQ__HasConsumptionSchedule__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Billing Discounts</relationshipLabel>
    <relationshipName>Product_Billing_Discounts</relationshipName>
    <type>Lookup</type>
</CustomField>