force-app/main/default/objects/QTB_Product_Billing_Discount__c/fields/QTB_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QTB_Start_Date__c</fullName>
    <description>#QTB-30, Discount Start Date</description>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>